--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder@1.13.0/dist/Control.Geocoder.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -12,6 +14,17 @@
     <title>Document</title>
 </head>
 <body>
+
+  <!-- Plugin de buscador -->
+  
+
+  <!-- Cabecera  -->
+
+
+
+  <!-- FIN Cabecera  -->
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
@@ -20,12 +33,13 @@
    <!--CAPAS-->
       <!-- Inicia Educacion -->
       <div
-        class="accordion"
+        class="accordion sidebar"
         id="accordionExample"
         style="
           width: 17%;
           border-radius: 3px;
-          padding-top: 3%;
+          padding-top: 0%;
+          margin-top: 3%;
           margin-right: 1%;
           float: right;
           position: absolute;
@@ -1996,15 +2010,11 @@
     <!-- Crea un contenedor div para el mapa -->
     <div id="map" style="width: 1530px; height: 750px;"></div>
 
-    <div>
-        <button id="toggleMancha1">Mancha 1</button>
-        <button id="toggleMancha2">Mancha 2</button>
-        <button id="toggleMancha3">Mancha 3</button>
-        <button id="toggleMunicipio">Municipio</button>
-    </div>
 
     <!-- Agrega el script para cargar y mostrar los polígonos -->
     <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.3.1/leaflet-omnivore.min.js'></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-control-geocoder@1.13.0/dist/Control.Geocoder.js"></script>
     <script src="mapa.js"></script>
 </body>
 </html>
